client/styles/strider.less
/* ... */
.last-builds {
  border-collapse: separate;
  border-spacing: 2px;
  margin: 9px;
  .status-passed { background-color: @strider-bg-passed; }
  .status-failed { background-color: @strider-bg-failed; }
  .status-errored { background-color: @strider-bg-errored; }
}

.progress {
  margin-bottom: 0;
}

.dashboard-row,
#dashboard table tr {
  padding: 10px 0;
  .action-buttons {
    div {
      visibility: hidden;
    }
  }
  td {
    padding: 10px 0;
    position: relative;
    font-size: 16px;
    a:hover {
      text-decoration: none;
    }
  }

  td > a,
  td > span {
    display: inline-block;
    padding: 5px 10px;
  }
  span.clickable,
  a {
    color: black;
    cursor: pointer;
  }
  .github-link {
    width: 1px;
  }
  &:hover {
    .action-buttons {
      & > div {
        visibility: visible;
      }
    }
  }
  .small-text {
    display: inline-block;
  }
  .action-buttons {
    width: 100px;
    text-align: center;
    .btn-group {
      padding-top: 4px;
    }
  }
  .progress-meter {
    .progress {
      margin-bottom: 0;
    }
  }
  .committer {
    a {
      padding: 0;
    }
    img {
      width: 35px;
      height: 35px;
      max-width: inherit;
      margin-bottom: -13px;
      margin-top: -1px;
    }
  }
  .project-name {
    a {
      font-size: 18px;
      line-height: 27px;
      font-weight: 700;
      width: 100%;
    }
  }
  .run-time {
    text-align: center;
  }
  i {
    font-size: 150%;
  }
  .commit-url {
    max-width: 300px;
    overflow: hidden;
  }
  .clickable i:hover,
  a:hover {
    color: #aaa;
  }
}

.dashboard-row {
  .finished-at,
  .refresh,
  .commit-url,
  .committer,
  .deploy,
  .configure,
  .run-time,
  .job-link {
    width: 1px;
    white-space: nowrap;
  }
}

@media (max-width: 980px) {
  #dashboard {
    .triggered-by-header,
    .commit-url,
    .job-link a span {
      display: none;
    }
  }
}

@media (min-width: 769px) {
  #dashboard {
    .finished-at,
    .refresh,
    .commit-url,
    .committer,
    .deploy,
    .configure,
    .run-time,
    .job-link {
      width: 1px;
      white-space: nowrap;
    }
  }
}

@media (max-width: 767px) {
  #dashboard {
    .finished-at {
      display: none;
    }
  }

  #build-page .job-title h3 {
    margin-bottom: 0.5em;
  }

  .navbar-fixed-top {
    margin-bottom: 0;
  }
}

@media (max-width: 650px) {
  #dashboard {
    overflow: auto;

    .deploy,
    .deploy-header,
    .refresh,
    .refresh-header,
    .configure,
    .configure-header,
    .committer,
    .committer-header,
    .github-header,
    .github-link {
      display: none;
    }
  }
}

@media (max-width: 450px) {
  #dashboard {
    table tr .project-name a {
      font-size: 14px;
      font-weight: normal;
      line-height: 25px;
    }
  }
}

.configure-action i {
  margin-top: 4px;
  display: inline-block;
  margin-left: 5px;
}

.docs-section {
  padding-top: 40px;
}
.docs p {
  font-size: 15px;
}
img.manual_setup {
  border: 1px solid #021a40;
}
.success {
  background: #9BCD9B;
}
.failure {
  background: #EE6363;
}
.success-text {
  color: #46a546;
}
.failure-text {
  color: #9d261d;
}
.error-text {
  color: #999;
}
.waiting-text {
  color: #0af;
}

footer {
  border-top:1px solid #ddd;
  background-color:#f0f0f0;
  margin-top:30px;
  padding:10px;
}

footer p {
  text-align: center;
  /* center align it with the container */

}
.dashboard-button,
.repo-action,
.start-manual-setup {
  float: right;
}
.header-emphasis {
  color: #455b87;
}
.job-pre-console {
  margin-top: 0;

  .job-pre-console-inner {
    min-height: 0;
  }
}
.job-list {
  border: 1px solid;
  border-radius: 3px;
  margin-left: 10px;
}
.job-list-item {
  width: 95%;
  border: 1px solid;
  border-radius: 3px;
  padding: 5px;
  margin: 10px;
}
.job-list-item:nth-child(2n) {
  background-color: #f5f5f5;
}
.job-notice {
  float: right;
}
#build-metadata {
  padding: 8px;
  border-radius: 3px;
}
#list-of-builds {
  overflow: auto;

  table {
    margin-bottom: 0;
  }
}
#build-detail-buttons {
  border: 1px solid;
  border-radius: 3px;
  margin-left: 10px;
  padding: 10px;
}
.build-list-item {
  width: auto;
  padding: 5px;
  border-bottom: 1px solid #CCB;
}
.build-list-header {
  width: 90%;
}
#commit-id,
.build-item-committer {
  float: right;
}
#commit-msg,
#build-duration,
.build-item-duration {
  float: right;
}
div#repo-list-viewall {
  margin: 15px;
}
.results-detail-times {
  border-top: 1px solid;
  border-color: #999999;
}
table.log {
  font-family: "Monaco", Courier, monospace;
  font-size: 14px;
  width: 100%;
  table-layout: fixed;
  margin-bottom: 20px;
  clear: both;
}
tr.logEntry {
  height: 53px;
}
tr.logEntry td {
  border-top: solid thin #CCC;
  padding: 0.5em;
  text-align: left;
}
.logEntry {
  color: #444;
}
.logEntry.repeated {
  display: none;
}
a.repeats {
  font-size: 75%;
  padding: 5px 5px 2px 5px;
  background-color: #EEE;
  border: 1px solid #999;
  opacity: 0.8;
  color: black;
  text-decoration: none;
}
.commandDetails .request {
  height: 20px;
}
.commandDetails .answer {
  color: #909;
  float: right;
  max-width: 75%;
  text-align: right;
}
.commandDetails .result {
  font-size: 80%;
  display: inline;
}
.commandDetails span.duration {
  color: #999;
  font-size: 80%;
  padding-left: 15px;
}
.commandDetails table {
  border: none;
  margin-top: 5px;
  font-size: 80%;
  margin-left: 1em;
}
.commandDetails table th {
  border-spacing: 0px;
  padding: 0px;
  margin: 0px;
}
.commandDetails table td {
  border: none;
  border-spacing: 0px;
  padding: 0px;
  margin: 0px;
}
.passed {
  background-color: @strider-bg-passed;
}
.failed {
  background-color: @strider-bg-failed;
}
.errored {
  background-color: @strider-bg-errored;
}
.running {
  background-color: @strider-bg-running;
}
.warning {
  background-color: #fffca9;
}
.submitted {
  background-color: @strider-bg-running;
}
.repeated.passed {
  background-color: @strider-bg-passed;
}
.repeated.failed {
  background-color: @strider-bg-failed;
}
/* ... */

